[package]
name = "mlab_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16.1", features = ["serde"] }
num-traits = "0.2.19"
rand = "0.8.5"
rand_distr = "0.4.3"
nalgebra = { version = "0.33.0" }
rustfft = "6.2.0"
image = { version = "0.25.1", optional = true }
imageproc = { version = "0.25.0", optional = true }

[features]
default = ["np", "sp", "sklearn", "skimage"]
np = []
sp = []
sklearn = []
skimage = ["dep:image", "dep:imageproc"]
